assets/css/style.css
#sitelogo {
  border: 0px;
  padding: 0px;
  margin: 0px;
  display: block;
}

.text-accent-color {
  color: var(--accent);
}

.post-time {
  text-transform: uppercase;
  padding: 0px;
  margin: 0px;
  border: 0px;
}
/*Code copy button CSS*/
/*From https://www.dannyguo.com/blog/how-to-add-copy-to-clipboard-buttons-to-code-blocks-in-hugo/ */
.copy-code-button {
  color: #272822;
  background-color: #FFF;
  border-color: #272822;
  border: 2px solid;
  border-radius: 3px 3px 0px 0px;

  /* right-align */
  display: block;
  margin-left: auto;
  margin-right: 0;

  margin-bottom: -2px;
  padding: 3px 8px;
  font-size: 0.8em;
}

.copy-code-button:hover {
  cursor: pointer;
  background-color: #F2F2F2;
}

.copy-code-button:focus {
  /* Avoid an ugly focus outline on click in Chrome,
     but darken the button for accessibility.
     See https://stackoverflow.com/a/25298082/1481479 */
  background-color: #E6E6E6;
  outline: 0;
}

.copy-code-button:active {
  background-color: #D9D9D9;
}

.highlight pre {
  /* Avoid pushing up the copy buttons. */
  margin: 0;
}

